fix overflow for body on modal

--- a/source/scss/main.modal.scss
+++ b/source/scss/main.modal.scss
@@ -1,6 +1,6 @@
 .main-modal{
     position: absolute;
-    z-index: 10;
+    z-index: 101;
     top: 0;
     right: 0;
     left: 0;
