--- a/source/scss/var.scss
+++ b/source/scss/var.scss
@@ -3,6 +3,9 @@
   text-transform: uppercase;
   letter-spacing: 1px;
 }
+._lock{
+  overflow: hidden;
+}
 .global-half{
   flex: 0 1 50%;
 }
